--- a/02-android/2018MovilesGR2/app/src/main/res/values/colors.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorGreen">#0ac438</color>
+    <color name="colorText">#8cf58e2e</color>
+
+
 </resources>
