--- a/proyecto-Android/Proyecto/app/src/main/res/values/texto.xml
+++ b/proyecto-Android/Proyecto/app/src/main/res/values/texto.xml
@@ -2,5 +2,7 @@
 <resources>
     <string name="tituloPrincipal"> CONTROLADORES</string>
 
+    <string name="epnTitulo">EPN Ingenieria En Sistemas</string>
+
 
 </resources>
