--- a/proyecto-Android/Proyecto/app/src/main/res/layout/activity_pantalla_tercera.xml
+++ b/proyecto-Android/Proyecto/app/src/main/res/layout/activity_pantalla_tercera.xml
@@ -4,24 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TerceraPantalla">
+    tools:context=".TerceraPantalla"
+    tools:layout_editor_absoluteY="81dp">
 
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="156dp" />
+        android:layout_height="198dp"
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="94dp" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="8dp"
         android:text="@string/tituloPrincipal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="40dp" />
+
+    <SearchView
+        android:layout_width="368dp"
+        android:layout_height="203dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="300dp" />
 </android.support.constraint.ConstraintLayout>
