--- a/proyecto-Android/Proyecto/app/src/main/res/layout/activity_segunda_pantalla.xml
+++ b/proyecto-Android/Proyecto/app/src/main/res/layout/activity_segunda_pantalla.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SegundaPantalla">
+    tools:context=".SegundaPantalla"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="14dp"
         android:layout_marginStart="23dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="38dp"
-        android:text="FORMULARIO"
+        android:layout_marginTop="34dp"
+        android:layout_marginBottom="29dp"
+        android:text="@string/tituloPrincipal"
+        android:textColor="@android:color/widget_edittext_dark"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintStart_toStartOf="@+id/editText"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="93dp"
-        android:text="Nombre:"
+        android:text="@string/nombre"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toStartOf="@+id/editText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:text="Apellido"
+        android:text="@string/apellido"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
         app:layout_constraintEnd_toStartOf="@+id/editText4"
         app:layout_constraintStart_toStartOf="parent" />
@@ -46,17 +50,20 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="7dp"
         android:text="Correo"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toStartOf="@+id/editText5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editText5" />
+        app:layout_constraintTop_toTopOf="@+id/editText5"
+        tools:text="@string/correo" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="3dp"
         android:layout_marginBottom="47dp"
-        android:text="Telefono"
+        android:text="@string/telefono"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toStartOf="@+id/editText6"
         app:layout_constraintStart_toStartOf="parent" />
@@ -66,10 +73,9 @@
         android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:layout_marginEnd="9dp"
-        android:layout_marginBottom="27dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/editText4"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3" />
 
@@ -77,15 +83,15 @@
         android:id="@+id/editText4"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="65dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="65dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="@+id/editText" />
 
     <EditText
         android:id="@+id/editText5"
@@ -93,7 +99,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="125dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="125dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="@+id/editText7"
@@ -105,23 +111,24 @@
         android:id="@+id/editText6"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="103dp"
+        android:layout_marginTop="102dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="102dp"
         android:ems="10"
         android:inputType="phone"
         app:layout_constraintBottom_toTopOf="@+id/botonSegundaPantalla"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginBottom="140dp"
-        android:text="Password"
+        android:layout_marginBottom="139dp"
+        android:text="@string/Password"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editText7"
         app:layout_constraintStart_toStartOf="parent" />
@@ -132,7 +139,7 @@
         android:layout_height="34dp"
         android:layout_marginTop="39dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginBottom="38dp"
+        android:layout_marginBottom="37dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/botonSegundaPantalla"
