--- a/proyecto-Android/Proyecto/app/src/main/res/values/colors.xml
+++ b/proyecto-Android/Proyecto/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
     <color name="botones">#ffffff</color>
+    <color name="letras">#1aa1ab</color>
 
 </resources>
