--- a/proyecto-Android/Proyecto/app/src/main/res/layout/activity_pantalla_tercera.xml
+++ b/proyecto-Android/Proyecto/app/src/main/res/layout/activity_pantalla_tercera.xml
@@ -10,21 +10,34 @@
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
-        android:layout_height="198dp"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="94dp" />
+        android:layout_height="0dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/searchView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="35dp"
         android:text="@string/tituloPrincipal"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="40dp" />
+        app:layout_constraintBottom_toTopOf="@+id/calendarView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SearchView
-        android:layout_width="368dp"
-        android:layout_height="203dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="300dp" />
+        android:id="@+id/searchView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 </android.support.constraint.ConstraintLayout>
