--- a/proyectos/proyecto-Android/Proyecto/app/src/main/res/values/texto.xml
+++ b/proyectos/proyecto-Android/Proyecto/app/src/main/res/values/texto.xml
@@ -3,6 +3,9 @@
     <string name="tituloPrincipal"> CONTROLADORES</string>
 
     <string name="epnTitulo">EPN Ingenieria En Sistemas</string>
+    <string name="calendario">Calendario</string>
+
+
 
 
 </resources>
