--- a/proyectos/proyecto-Android/Proyecto/app/src/main/res/layout/activity_segunda_pantalla.xml
+++ b/proyectos/proyecto-Android/Proyecto/app/src/main/res/layout/activity_segunda_pantalla.xml
@@ -105,12 +105,13 @@
         app:layout_constraintBottom_toBottomOf="@+id/editText7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/editText6"
         android:layout_width="wrap_content"
-        android:layout_height="34dp"
+        android:layout_height="42dp"
         android:layout_marginTop="102dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="102dp"
