examen primer bimestre

--- a/02-android/2018MovilesGR2/app/src/main/res/layout/activity_main.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/layout/activity_main.xml
@@ -57,11 +57,12 @@
 
     <Button
         android:id="@+id/boton_ingreso"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
+        android:layout_width="108dp"
+        android:layout_height="40dp"
         android:layout_marginTop="100dp"
-        android:text="Button"
+        android:text="Intent Correo"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.606"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -87,21 +88,37 @@
         app:layout_constraintGuide_begin="20dp" />
 
     <Button
-        android:id="@+id/button_intent_respuesta"
+        android:id="@+id/Boton_intent_respuesta"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="95dp"
-        android:text="intent_respuesta"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="41dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="16dp"
+        android:text="Intent  resp"
+        app:layout_constraintEnd_toStartOf="@+id/boton_ingreso"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="292dp" />
+        tools:layout_editor_absoluteX="592dp"
+        tools:layout_editor_absoluteY="273dp" />
+
+    <Button
+        android:id="@+id/ciclo_vida"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="8dp"
+        android:text="cliclo "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.441"
+        app:layout_constraintStart_toEndOf="@+id/boton_ingreso"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </android.support.constraint.ConstraintLayout>
