--- a/02-android/2018MovilesGR2/app/src/main/res/layout/activity_intent_respuesta.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/layout/activity_intent_respuesta.xml
@@ -10,9 +10,13 @@
         android:id="@+id/button_enviar_intent_respuesta"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="167dp"
+        android:layout_marginTop="191dp"
+        android:layout_marginBottom="19dp"
         android:text="enviar_intent_respuesta"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.222" />
 </android.support.constraint.ConstraintLayout>
