--- a/02-android/2018MovilesGR2/app/src/main/res/layout/activity_fragmentos.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/layout/activity_fragmentos.xml
@@ -4,33 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentosActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:context=".FragmentosActivity">
 
     <fragment
-        android:id="@+id/fragment_primero"
-        android:name="com.example.viniq.a2018movilesgr2.PrimerFragment"
+        android:id="@+id/fragment_primer"
+        android:name="com.example.usrdel.a2018movilesgr2.PrimerFragment"
         android:layout_width="wrap_content"
-        android:layout_height="14dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_crear_primer"
+        android:id="@+id/button_crear_primer_fragmento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="39dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
         android:text="Primer"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_primero"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
