--- a/02-android/2018MovilesGR2/app/src/main/res/values-es-rEC-port/texto.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/values-es-rEC-port/texto.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="newText">hello world!!</string>
+    <string name="textoPrincipal">K mas ve!</string>
 </resources>
