--- a/02-android/2018MovilesGR2/app/src/main/res/layout/activity_intent_respuesta.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/layout/activity_intent_respuesta.xml
@@ -9,14 +9,27 @@
     <Button
         android:id="@+id/button_enviar_intent_respuesta"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="191dp"
-        android:layout_marginBottom="19dp"
-        android:text="enviar_intent_respuesta"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Enviar Intent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.222" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_result_propio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Obtener Nombre Apellido"
+        app:layout_constraintBottom_toTopOf="@+id/button_enviar_intent_respuesta"
+        app:layout_constraintEnd_toEndOf="@+id/button_enviar_intent_respuesta"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="@+id/button_enviar_intent_respuesta" />
 </android.support.constraint.ConstraintLayout>
