--- a/02-android/2018MovilesGR2/app/src/main/res/values/colors.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/values/colors.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="colorGreen">#0ac438</color>
-    <color name="colorText">#8cf58e2e</color>
-
-
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorGreen">#03a603</color>
 </resources>
