--- a/Examen.Primer.Bimestre/Examen.PB/app/src/main/res/layout/activity_main.xml
+++ b/Examen.Primer.Bimestre/Examen.PB/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_consultar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="159dp"
@@ -25,5 +25,5 @@
         android:layout_marginBottom="156dp"
         android:text="Ingresar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/button" />
+        app:layout_constraintStart_toStartOf="@+id/button_consultar" />
 </android.support.constraint.ConstraintLayout>
